--- a/views/a.ejs
+++ b/views/a.ejs
@@ -55,7 +55,7 @@
           });
           </script>
 <%   }else{ %>
-          <input type="text" id="answer_<%= i %>" class="form-control" value=""/>
+          <input type="number" id="answer_<%= i %>" class="form-control" value=""/>
 <%   }
    } %>
         </td>
