post save actions added.

--- a/views/q.ejs
+++ b/views/q.ejs
@@ -186,6 +186,7 @@ function save_question(){
       data: data,
       success: function( result ){
         console.log( { result } );
+        location.href = '/';
       },
       error: function( e0, e1, e2 ){
         console.log( e0, e1, e2 );
@@ -198,6 +199,7 @@ function save_question(){
       data: data,
       success: function( result ){
         console.log( { result } );
+        location.href = '/';
       },
       error: function( e0, e1, e2 ){
         console.log( e0, e1, e2 );
