--- a/views/a.ejs
+++ b/views/a.ejs
@@ -100,6 +100,8 @@ function save_answer(){
     data: data,
     success: function( result ){
       console.log( { result } );
+      alert( 'アンケートに回答いただきありがとうございました。' );
+      window.close();
     },
     error: function( e0, e1, e2 ){
       console.log( e0, e1, e2 );
